crates/strider-analyze/tests/snapshots/v2__x86_kernel__floats__f64_arith.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="bitcast\nf80 → u80", shape=box, fillcolor="#302018"];
  "7" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Div:f80", shape=box, fillcolor="#1a3020"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:f80", shape=box, fillcolor="#1a3020"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="FloatToFloat\nf64 → f80", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[3] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="IntToFloat\nu32 → f80", shape=box, fillcolor="#302018"];
  "14" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Add:f80", shape=box, fillcolor="#1a3020"];
  "15" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Neg\nf80 → f80", shape=box, fillcolor="#1a3020"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="FloatToFloat\nf64 → f80", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Mul:f80", shape=box, fillcolor="#1a3020"];
  "23" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:f80", shape=box, fillcolor="#1a3020"];
  "11" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
}
